# ocash-sdk

./: .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_zh.md  SECURITY.md  browser.js  build_wasm_assets.mjs  llms.txt  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.cursor/: rules
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
core/: Cargo.toml
core/crates/ocash-crypto/: Cargo.toml
core/crates/ocash-crypto/src/: babyjubjub.rs  commitment.rs  keys.rs  lib.rs  memo.rs  nullifier.rs  poseidon2.rs  record.rs
core/crates/ocash-merkle/: Cargo.toml
core/crates/ocash-merkle/src/: lib.rs
core/crates/ocash-ops/: Cargo.toml
core/crates/ocash-ops/src/: lib.rs
core/crates/ocash-planner/: Cargo.toml
core/crates/ocash-planner/src/: lib.rs
core/crates/ocash-store/: Cargo.toml
core/crates/ocash-store/src/: lib.rs  memory.rs
core/crates/ocash-sync/: Cargo.toml
core/crates/ocash-sync/src/: entry_client.rs  lib.rs
core/crates/ocash-tx/: Cargo.toml
core/crates/ocash-tx/src/: lib.rs  relayer_client.rs
core/crates/ocash-types/: Cargo.toml
core/crates/ocash-types/src/: lib.rs
core/tests/vectors/: all_vectors.json  babyjubjub.json  key_derivation.json  merkle.json  nullifier.json  pool_id.json  poseidon2_sequence.json
demos/browser/: README.md  README_en.md  README_zh.md  index.html  vite.config.ts
demos/browser-lite/: index.html  tsconfig.json  vite.config.ts
demos/browser-lite/src/: App.tsx  config.ts  main.tsx  store.tsx  styles.css
demos/browser/src/: App.tsx  styles.css
demos/metamask-extension-13.19.0/: attribution.txt  package.json
demos/node/: README.md  README_en.md  README_zh.md  ocash.config.example.json  tsconfig.debug.json  tsconfig.json
demos/node/src/: index.ts
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: core.md  crypto.md  ops.md  planner.md  sdk.md  storage.md  sync.md  types.md  wallet.md
docs/guide/: architecture.md  browser-setup.md  configuration.md  deployments.md  deposit.md  events.md  getting-started.md  storage.md  transfer.md  utxo-model.md  withdraw.md
docs/public/: CNAME  llms-full.txt  llms.txt
docs/zh/: index.md
docs/zh/api/: core.md  crypto.md  ops.md  planner.md  sdk.md  storage.md  sync.md  types.md  wallet.md
docs/zh/guide/: architecture.md  browser-setup.md  configuration.md  deployments.md  (+7 more)
python/: Cargo.toml  pyproject.toml
python/ocash/: __init__.py  crypto.py
python/src/: lib.rs
python/tests/: test_crypto.py
scripts/: gen-vectors.ts
sdk-browser-demo/: README.md  package.json
sdk-browser-demo/src/: App.tsx  main.tsx  styles.css
sdk-node-demo/: README.md  ocash.config.example.json  package.json  tsconfig.json
sdk-node-demo/src/: index.ts  main.ts
src/: deployments.ts  errors.ts  index.browser.ts  index.node.ts  index.ts  types.ts
src/abi/: Ocash.json  app.ts  erc20.ts
src/assets/: defaultAssetsOverride.ts
src/core/: events.ts  sdk-core.ts
src/crypto/: babyJubjub.ts  cryptoToolkit.ts  field.ts  keyManager.ts  poseidon2.ts  recordCodec.ts  records.ts
src/dummy/: dummyFactory.ts
src/ledger/: ledgerInfo.ts  poolsFromContract.ts  relayerConfig.ts  tokenNormalize.ts  validate.ts
src/memo/: memoKit.ts  worker-shim.ts  worker.ts
src/merkle/: localMerkleTree.ts  merkleClient.ts  merkleEngine.ts  zeroHashes.ts
src/ops/: ops.ts  pickMerkleRootIndex.ts  relayerClient.ts
src/planner/: planner.ts
src/proof/: proofEngine.ts
src/runtime/: assetsManifest.ts  assetsManifestNode.ts  cache.ts  wasmBridge.ts  wasmExecBundled.d.ts  wasmExecBundled.js
src/store/: entryMemoQuery.ts  entryNullifierQuery.ts  fileStore.ts  indexedDbStore.ts  keyValueStore.ts  memoryStore.ts  operationTypes.ts  operationsQuery.ts  persisted.ts  persistedWalletState.ts  redisStore.ts  sqliteStore.ts  utxoQuery.ts
src/sync/: entryClient.ts  syncEngine.ts
src/tx/: txBuilder.ts  txBuilderStub.ts
src/utils/: bigint.ts  hex.ts  httpDebug.ts  index.ts  json.ts  ocashBindings.ts  random.ts  signal.ts  url.ts  validators.ts
src/wallet/: walletService.ts
tests/: assetsManifest.test.ts  assetsManifestNode.test.ts  bigint.test.ts  cacheController.test.ts  entryClient.test.ts  fileStore.test.ts  helpers.ts  hex.test.ts  indexedDbStore.test.ts  json.test.ts  keyValueStore.test.ts  ledgerInfo.test.ts  memoryStore.test.ts  merkleClient.test.ts  merkleEngine.test.ts  merkleStores.test.ts  operationsListQuery.test.ts  opsDeposit.test.ts  opsOperations.test.ts  opsPrepare.test.ts  opsSubmitRelayerRequest.test.ts  opsWaitRelayerTxHash.test.ts  pickMerkleRootIndex.test.ts  planner.test.ts  poolsFromContract.test.ts  proofEngine.test.ts  relayerClient.test.ts  runtimeBridge.test.ts  sdkCore.test.ts  signal.test.ts  syncEngine.test.ts  syncEngineConcurrency.test.ts  syncEngineMemosGap.test.ts  syncEngineMerkle.test.ts  syncEngineMerkleRestart.test.ts  syncEngineNullifierAnomaly.test.ts  syncEngineStart.test.ts  syncEngineWalletNotOpened.test.ts  tokenNormalize.test.ts  txBuilder.test.ts  (+4 more)
tests/vectors/: all_vectors.json  commitment.json  memo_nonce.json  poseidon2.json  record_codec.json
(+87 files in other folders)
