[workspace]
resolver = "2"
members = [
    "crates/ocash-types",
    "crates/ocash-crypto",
    "crates/ocash-merkle",
    "crates/ocash-store",
    "crates/ocash-sync",
    "crates/ocash-planner",
    "crates/ocash-tx",
    "crates/ocash-ops",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PolyhedraZK/ocash-core"

[workspace.dependencies]
# Arkworks ecosystem
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"

# Crypto
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
xsalsa20poly1305 = "0.9"

# Networking
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Error handling
thiserror = "2"

# Internal crates
ocash-types = { path = "crates/ocash-types" }
ocash-crypto = { path = "crates/ocash-crypto" }
ocash-merkle = { path = "crates/ocash-merkle" }
ocash-store = { path = "crates/ocash-store" }
ocash-sync = { path = "crates/ocash-sync" }
ocash-planner = { path = "crates/ocash-planner" }
ocash-tx = { path = "crates/ocash-tx" }
ocash-ops = { path = "crates/ocash-ops" }
