[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ocash-sdk"
version = "0.1.0"
requires-python = ">=3.10"
description = "OCash privacy SDK — Python bindings for Rust core"

[tool.maturin]
python-source = "."
module-name = "ocash._native"
features = ["pyo3/extension-module"]
