[package]
name = "ocash-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocash-types.workspace = true
ocash-store = { path = "../ocash-store" }
ocash-crypto = { path = "../ocash-crypto" }
ark-ff.workspace = true
ark-bn254.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
