[package]
name = "ocash-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocash-types.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
async-trait = "0.1"
