[package]
name = "ocash-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocash-types.workspace = true
ocash-store = { path = "../ocash-store" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
