[package]
name = "ocash-tx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocash-types.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
